// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorView EditorView renders EditorView 1`] = `
<div>
  <div
    class=" ace_editor ace_hidpi ace-tm"
    id="editor"
    style="width: 500px; height: 500px; font-size: 12px;"
  >
    <textarea
      aria-autocomplete="both"
      aria-haspopup="false"
      aria-label="Cursor at row 1"
      autocapitalize="off"
      autocomplete="off"
      autocorrect="off"
      class="ace_text-input"
      role="textbox"
      spellcheck="false"
      style="opacity: 0; font-size: 1px;"
      wrap="off"
    />
    <div
      aria-hidden="true"
      class="ace_gutter"
    >
      <div
        class="ace_layer ace_gutter-layer ace_folding-enabled"
        style="height: 1000000px;"
      />
    </div>
    <div
      class="ace_scroller"
      style="line-height: 0px;"
    >
      <div
        class="ace_content"
      >
        <div
          class="ace_layer ace_print-margin-layer"
        >
          <div
            class="ace_print-margin"
            style="left: 4px; visibility: hidden;"
          />
        </div>
        <div
          class="ace_layer ace_marker-layer"
        />
        <div
          class="ace_layer ace_text-layer"
          style="height: 1000000px; margin: 0px 4px;"
        />
        <div
          class="ace_layer ace_marker-layer"
        />
        <div
          class="ace_layer ace_cursor-layer ace_hidden-cursors"
        >
          <div
            class="ace_cursor"
          />
        </div>
      </div>
    </div>
    <div
      class="ace_scrollbar ace_scrollbar-v"
      style="display: none; width: 20px;"
      tabindex="-1"
    >
      <div
        class="ace_scrollbar-inner"
        style="width: 20px;"
      >
         
      </div>
    </div>
    <div
      class="ace_scrollbar ace_scrollbar-h"
      style="display: none; height: 20px;"
      tabindex="-1"
    >
      <div
        class="ace_scrollbar-inner"
        style="height: 20px;"
      >
         
      </div>
    </div>
    <div
      style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: hidden;"
    >
      <div
        style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
      />
      <div
        style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
      >
        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
      </div>
    </div>
    <div
      class="ace_tooltip ace_gutter-tooltip"
      id="gt1"
      role="tooltip"
      style="display: none; white-space: pre-wrap; pointer-events: auto;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`EditorView EditorView renders EditorView w/vim&mask 1`] = `
<div>
  <div
    class=" ace_editor ace_hidpi ace-tm mask-editor"
    id="editor"
    style="width: 500px; height: 500px; font-size: 12px;"
  >
    <textarea
      aria-autocomplete="both"
      aria-haspopup="false"
      aria-label="Cursor at row 1"
      autocapitalize="off"
      autocomplete="off"
      autocorrect="off"
      class="ace_text-input"
      role="textbox"
      spellcheck="false"
      style="opacity: 0; font-size: 1px;"
      wrap="off"
    />
    <div
      aria-hidden="true"
      class="ace_gutter"
    >
      <div
        class="ace_layer ace_gutter-layer ace_folding-enabled"
        style="height: 1000000px;"
      />
    </div>
    <div
      class="ace_scroller"
      style="line-height: 0px;"
    >
      <div
        class="ace_content"
      >
        <div
          class="ace_layer ace_print-margin-layer"
        >
          <div
            class="ace_print-margin"
            style="left: 4px; visibility: hidden;"
          />
        </div>
        <div
          class="ace_layer ace_marker-layer"
        />
        <div
          class="ace_layer ace_text-layer"
          style="height: 1000000px; margin: 0px 4px;"
        />
        <div
          class="ace_layer ace_marker-layer"
        />
        <div
          class="ace_layer ace_cursor-layer ace_hidden-cursors"
        >
          <div
            class="ace_cursor"
          />
        </div>
      </div>
    </div>
    <div
      class="ace_scrollbar ace_scrollbar-v"
      style="display: none; width: 20px;"
      tabindex="-1"
    >
      <div
        class="ace_scrollbar-inner"
        style="width: 20px;"
      >
         
      </div>
    </div>
    <div
      class="ace_scrollbar ace_scrollbar-h"
      style="display: none; height: 20px;"
      tabindex="-1"
    >
      <div
        class="ace_scrollbar-inner"
        style="height: 20px;"
      >
         
      </div>
    </div>
    <div
      style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: hidden;"
    >
      <div
        style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
      />
      <div
        style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
      >
        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
      </div>
    </div>
    <div
      class="ace_tooltip ace_gutter-tooltip"
      id="gt2"
      role="tooltip"
      style="display: none; white-space: pre-wrap; pointer-events: auto;"
      tabindex="-1"
    />
  </div>
</div>
`;
